--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: formsflow-ai-realm
+    name: {{ .Chart.Name }}
 data:
   formsflow-ai-realm.json: |- 
     {
