--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: {{ .Chart.Name }}
+    name: {{ .Chart.Name }}-config
 data:
-  formsflow-ai-realm.json: |- 
+  {{ .Chart.Name }}-realm.json: |- 
     {
       "id": "forms-flow-ai",
       "realm": "forms-flow-ai",
