--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: {{ .Chart.Name }}-config
+    name: {{ .Chart.Name }}-realm
 data:
   {{ .Chart.Name }}-realm.json: |- 
     {
