--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: "{{ .Values.name }}-realm"
+    name: "keycloak-realm"
 data:
-  "{{ .Values.name }}-realm.json": |- 
+  "realm.json": |- 
     {
       "id": "forms-flow-ai",
       "realm": "forms-flow-ai",
