autobuild forms-flow-idm

--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -64,6 +64,6 @@ keycloak:
   service:
     extraPorts:
       - name: console
-        servicePort: 8080
+        port: 8080
         protocol: TCP
 name: forms-flow-idm
