--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -7,6 +7,15 @@ keycloak:
       value: admin
     - name: KEYCLOAK_USER
       value: admin
+    - name: JAVA_OPTS
+      value: >-
+        -XX:+UseContainerSupport
+        -XX:MaxRAMPercentage=50.0
+        -Djava.net.preferIPv4Stack=true
+        -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS
+        -Djava.awt.headless=true
+        -Dkeycloak.profile.feature.scripts=enabled
+        -Dkeycloak.profile.feature.upload_scripts=enabled
   
 
   extraVolumes: |
