--- a/forms-flow-ai/templates/secret.yaml
+++ b/forms-flow-ai/templates/secret.yaml
@@ -3,12 +3,12 @@ kind: Secret
 metadata:
   creationTimestamp: null
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: "{{ .Values.name }}"
+  name: "{{ .Values.name }}"
 stringData:
-  BPM_CLIENT_ID: {{ .Values.bpm_keycloak_clientid }}
-  BPM_CLIENT_SECRET: {{ .Values.bpm_keycloak_clientsecret }}
-  FORMIO_ROOT_EMAIL: {{ .Values.formio_admin_email }}
-  FORMIO_ROOT_PASSWORD: {{ .Values.formio_admin_password }}
-  KEYCLOAK_REALM: {{ .Values.keycloak_realm }}
-  WEB_CLIENTID: {{ .Values.keycloak_web_clientid }}
+  BPM_CLIENT_ID: "{{ .Values.bpm_keycloak_clientid }}"
+  BPM_CLIENT_SECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
+  FORMIO_ROOT_EMAIL: "{{ .Values.formio_admin_email }}"
+  FORMIO_ROOT_PASSWORD: "{{ .Values.formio_admin_password }}"
+  KEYCLOAK_REALM: "{{ .Values.keycloak_realm }}"
+  WEB_CLIENTID: "{{ .Values.keycloak_web_clientid }}"
