autobuild forms-flow-ai

--- a/forms-flow-ai/templates/configmap.yaml
+++ b/forms-flow-ai/templates/configmap.yaml
@@ -8,9 +8,9 @@ data:
   FORMIO_DEBUG: "formio:*"
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
-  KEYCLOAK_JWT_OIDC_CONFIG: "{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/.well-known/openid-configuration"
-  KEYCLOAK_JWT_OIDC_ISSUER: "{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}"
+  KEYCLOAK_JWT_OIDC_CONFIG: "http://{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/.well-known/openid-configuration"
+  KEYCLOAK_JWT_OIDC_ISSUER: "http://{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}"
   KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
-  KEYCLOAK_JWT_OIDC_JWKS_URI: "{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/certs"
-  KEYCLOAK_TOKEN_URL: "{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/token"
+  KEYCLOAK_JWT_OIDC_JWKS_URI: "http://{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/certs"
+  KEYCLOAK_TOKEN_URL: "http://{{ .Values.keycloak_url }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/token"
   WEB_API_BASE_URL: "https://{{ .Values.web_api_url }}"
