autobuild forms-flow-ai

--- a/forms-flow-ai/values.yaml
+++ b/forms-flow-ai/values.yaml
@@ -3,5 +3,6 @@ bpm_keycloak_clientsecret: '97eb25b0-78db-42e1-a4a2-a26fab23f7c1'
 formio_admin_email: me@defineme.com
 formio_admin_password: admin
 keycloak_realm: forms-flow-ai
+keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
 keycloak_web_clientid: forms-flow-web
 name: forms-flow-ai
