--- a/forms-flow-bpm/values.yaml
+++ b/forms-flow-bpm/values.yaml
@@ -17,7 +17,7 @@ formsflow_config_name: forms-flow-ai
 formsflow_secret: forms-flow-ai
 hikari_valid_timeout: 5000
 image_tag: latest 
-keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
+keycloak_url: "http://formsflow.idm.apps.devops.aot-technologies.com"
 mail_from: support@aot-technologies.com
 mail_password: YwJaMyhmHbBg0cp6
 mail_user: support@aot-technologies.com
