--- a/forms-flow-web/values.yaml
+++ b/forms-flow-web/values.yaml
@@ -1,23 +1,22 @@
 app_name: forms-flow-ai
-application_name: '# TODO: must define a default value for .application_name'
-camunda_url: '# TODO: must define a default value for .camunda_url'
+camunda_url: formsflow.bpm.apps.devops.aot-technologies.com
 cpu_limit: 750m
 cpu_request: 100m
-forms_url: '# TODO: must define a default value for .forms_url'
+forms_url: formio.apps.devops.aot-technologies.com
 kc_mount_path: /usr/share/nginx/html/config/kc
-keycloak_realm: '# TODO: must define a default value for .keycloak_realm'
-keycloak_url: '# TODO: must define a default value for .keycloak_url'
+keycloak_realm: forms-flow-ai
+keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
 memory_limit: 2Gi
 memory_request: 100Mi
 mount_path: /usr/share/nginx/html/config/
 name: forms-flow-web
-react_app_anonymous_id: '# TODO: must define a default value for .react_app_anonymous_id'
-react_app_client_id: '# TODO: must define a default value for .react_app_client_id'
-react_app_staff_designer_id: '# TODO: must define a default value for .react_app_staff_designer_id'
-react_app_staff_reviewer_id: '# TODO: must define a default value for .react_app_staff_reviewer_id'
-react_app_user_resource_form_id: '# TODO: must define a default value for .react_app_user_resource_form_id'
-react_app_websocket_encrypt_key: '# TODO: must define a default value for .react_app_websocket_encrypt_key'
+react_app_anonymous_id: '61856bbc69b630461b977ae1'
+react_app_client_id: '61856bbc69b630461b977ae3'
+react_app_staff_designer_id: '61856bbc69b630f304977adf'
+react_app_staff_reviewer_id: '61856bbc69b630f304977ae2'
+react_app_user_resource_form_id: '61856bbc69b6301d70977ae4'
+react_app_websocket_encrypt_key: "{REACT_APP_WEBSOCKET_ENCRYPT_KEY}"
 redash_secret_key: '# TODO: must define a default value for .redash_secret_key'
 tag_name: latest
-web_api_url: '# TODO: must define a default value for .web_api_url'
-web_url: '# TODO: must define a default value for .web_url'
+web_api_url: formsflow.webapi.apps.devops.aot-technologies.com
+web_url: formsflow.web.apps.devops.aot-technologies.com
