--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -19,6 +19,9 @@ dependencies:
   - name: forms-flow-idm
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
+  - name: forms-flow-web
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-ai
 version: v0.0.1
 icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
