--- a/forms-flow-bpm/values.yaml
+++ b/forms-flow-bpm/values.yaml
@@ -12,12 +12,12 @@ camunda_hikari_maximum_poolsize: 10
 camunda_session_db_resource_name: camunda-session-postgresql
 camunda_url: "formsflow.bpm.apps.devops.aot-technologies.com"
 database_port: 5432
-forms_url: "http://formio.apps.devops.aot-technologies.com"
+forms_url: "formio.apps.devops.aot-technologies.com"
 formsflow_config_name: forms-flow-ai
 formsflow_secret: forms-flow-ai
 hikari_valid_timeout: 5000
 image_tag: latest 
-keycloak_url: "http://formsflow.idm.apps.devops.aot-technologies.com"
+keycloak_url: "formsflow.idm.apps.devops.aot-technologies.com"
 mail_from: support@aot-technologies.com
 mail_password: YwJaMyhmHbBg0cp6
 mail_user: support@aot-technologies.com
@@ -28,7 +28,7 @@ smtp_server: smtp-relay.sendinblue.com
 source_context_dir: /forms-flow-bpm
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
-web_api_url: "http://formsflow.webapi.apps.devops.aot-technologies.com"
+web_api_url: "formsflow.webapi.apps.devops.aot-technologies.com"
 websocket_encrypt_key: FormsFlow.AI@Taft
 websocket_message_type: TASK_EVENT
 websocket_security_origin: "https://*.devops.aot-technologies.com"
