--- a/forms-flow-web/values.yaml
+++ b/forms-flow-web/values.yaml
@@ -17,6 +17,7 @@ react_app_staff_reviewer_id: '61856bbc69b630f304977ae2'
 react_app_user_resource_form_id: '61856bbc69b6301d70977ae4'
 react_app_websocket_encrypt_key: "{REACT_APP_WEBSOCKET_ENCRYPT_KEY}"
 redash_secret_key: '# TODO: must define a default value for .redash_secret_key'
+source_context_dir: forms-flow-web 
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai 
 tag_name: latest
