--- a/forms-flow-webapi/templates/deploymentconfig.yaml
+++ b/forms-flow-webapi/templates/deploymentconfig.yaml
@@ -4,12 +4,12 @@ metadata:
   annotations: null
   creationTimestamp: null
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
   strategy:
     activeDeadlineSeconds: 21600
     resources: {}
@@ -24,7 +24,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        app: {{ .Values.name }}
+        app: {{ .Chart.Name }}
     spec:
       containers:
       - env:
@@ -100,8 +100,8 @@ spec:
               name: {{ .Values.formsflow_config_name }}-config
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
-        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.name }}
-        name: {{ .Values.name }}
+        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
+        name: {{ .Chart.Name }}
       ports:
       - containerPort: 5000
       resources: {}
