--- a/forms-flow-webapi/templates/route.yaml
+++ b/forms-flow-webapi/templates/route.yaml
@@ -2,8 +2,8 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   host: {{ .Values.web_api_url }}
   tls:
@@ -11,5 +11,5 @@ spec:
     termination: edge
   to:
     kind: Service
-    name: {{ .Values.name }}
+    name: {{ .Chart.Name }}
   wildcardPolicy: None
