--- a/forms-flow-webapi/templates/service.yaml
+++ b/forms-flow-webapi/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Chart.Name }}
 spec:
   ports:
   - port: 5000
     protocol: TCP
     targetPort: 5000
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
