--- a/webapi-postgresql/templates/persistentvolumeclaim.yaml
+++ b/webapi-postgresql/templates/persistentvolumeclaim.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: {{ .Values.name }}-{{ .Values.tag_name }}
-    app-group: {{ .Values.app_group }}
-    template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-{{ .Values.tag_name }}
+    app: "{{ .Values.name }}-{{ .Values.tag_name }}"
+    app-group: "{{ .Values.app_group }}"
+    template: "{{ .Values.name }}-deploy"
+  name: "{{ .Values.name }}-{{ .Values.tag_name }}"
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.persistent_volume_size }}
-  storageClassName: {{ .Values.persistent_volume_class }}
+      storage: "{{ .Values.persistent_volume_size }}"
+  storageClassName: "{{ .Values.persistent_volume_class }}"
