--- a/forms-flow-webapi/templates/route.yaml
+++ b/forms-flow-webapi/templates/route.yaml
@@ -2,14 +2,14 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: {{ .Chart.Name }}
-  name: {{ .Chart.Name }}
+    app: "{{ .Chart.Name }}"
+  name: "{{ .Chart.Name }}"
 spec:
-  host: {{ .Values.web_api_url }}
+  host: "{{ .Values.web_api_url }}"
   tls:
     insecureEdgeTerminationPolicy: Redirect
     termination: edge
   to:
     kind: Service
-    name: {{ .Chart.Name }}
+    name: "{{ .Chart.Name }}"
   wildcardPolicy: None
