--- a/forms-flow-analytics-postgresql-deploy/templates/persistentvolumeclaim.yaml
+++ b/forms-flow-analytics-postgresql-deploy/templates/persistentvolumeclaim.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: {{ .Values.name }}-{{ .Values.instance }}
+    app: {{ .Values.name }}
     app-group: {{ .Values.app_group }}
     template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-{{ .Values.instance }}
+  name: {{ .Values.name }}
 spec:
   accessModes:
   - ReadWriteOnce
