--- a/forms-flow-webapi/values.yaml
+++ b/forms-flow-webapi/values.yaml
@@ -1,4 +1,9 @@
+formsflow_config_name: forms-flow-ai
+formsflow_secret: forms-flow-ai
+image_tag: latest
+mongodb_secret_name:
 source_context_dir: /forms-flow-ai/forms-flow-api
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
+webapi_db_resource_name: 
 web_api_url: https://formsflow.web.apps.devops.aot-technologies.com/
