--- a/redash-redis-cluster-dc/templates/service.yaml
+++ b/redash-redis-cluster-dc/templates/service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.app_name }}-{{ .Values.instance }}
-    name: {{ .Values.name }}-{{ .Values.instance }}
-    template: {{ .Values.name }}-{{ .Values.instance }}-template
-  name: {{ .Values.name }}-{{ .Values.instance }}
+    app: {{ .Values.app_name }}
+    name: {{ .Values.name }}
+    template: {{ .Values.name }}-template
+  name: {{ .Values.name }}
 spec:
   ports:
   - name: client
@@ -15,5 +15,5 @@ spec:
     port: 16379
     targetPort: 16379
   selector:
-    app: {{ .Values.app_name }}-{{ .Values.instance }}
+    app: {{ .Values.app_name }}
   type: ClusterIP
