--- a/redash-redis-cluster-dc/templates/statefulset.yaml
+++ b/redash-redis-cluster-dc/templates/statefulset.yaml
@@ -2,23 +2,22 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
-    app: {{ .Values.app_name }}-{{ .Values.instance }}
-    name: {{ .Values.name }}-{{ .Values.instance }}
-    template: {{ .Values.name }}-{{ .Values.instance }}-template
-  name: {{ .Values.name }}-{{ .Values.instance }}
+    app: {{ .Values.app_name }}
+    name: {{ .Values.name }}
+  name: {{ .Values.name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.app_name }}-{{ .Values.instance }}
-  serviceName: {{ .Values.name }}-{{ .Values.instance }}
+      app: {{ .Values.app_name }}
+  serviceName: {{ .Values.name }}
   template:
     metadata:
       annotations:
         prometheus.io/port: "9121"
         prometheus.io/scrape: "true"
       labels:
-        app: {{ .Values.app_name }}-{{ .Values.instance }}
+        app: {{ .Values.app_name }}
     spec:
       containers:
       - image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redis_exporter_name }}"
@@ -73,7 +72,7 @@ spec:
       volumes:
       - configMap:
           defaultMode: 493
-          name: {{ .Values.name }}-{{ .Values.instance }}
+          name: {{ .Values.name }}
         name: conf
   volumeClaimTemplates:
   - metadata:
