autobuild camunda-postgres

--- a/camunda-postgres/templates/deploymentconfig.yaml
+++ b/camunda-postgres/templates/deploymentconfig.yaml
@@ -3,14 +3,14 @@ kind: DeploymentConfig
 metadata:
   generation: 1
   labels:
-    app: {{ .Values.name }}-{{ .Values.tag_name }}
+    app: {{ .Values.name }}
     app-group: {{ .Values.app_group }}
     template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-{{ .Values.tag_name }}
+  name: {{ .Values.name }}
 spec:
   replicas: 1
   selector:
-    name: {{ .Values.name }}-{{ .Values.tag_name }}
+    name: {{ .Values.name }}
   strategy:
     activeDeadlineSeconds: 21600
     recreateParams:
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        name: {{ .Values.name }}-{{ .Values.tag_name }}
+        name: {{ .Values.name }}
     spec:
       containers:
       - env:
@@ -28,22 +28,22 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: DATABASE_USER
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-config
+              name: {{ .Values.name }}-config
         - name: POSTGRESQL_PASSWORD
           valueFrom:
             secretKeyRef:
               key: DATABASE_PASSWORD
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-secret
+              name: {{ .Values.name }}-secret
         - name: POSTGRESQL_DATABASE
           valueFrom:
             configMapKeyRef:
               key: DATABASE_NAME
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-config
+              name: {{ .Values.name }}-config
         - name: POSTGRESQL_ADMIN_DATABASE
           valueFrom:
             secretKeyRef:
               key: DATABASE_ADMIN_PASSWORD
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-secret
+              name: {{ .Values.name }}-secret
         image: "{{ .Values.image_url }}"
         imagePullPolicy: IfNotPresent
         livenessProbe:
@@ -54,7 +54,7 @@ spec:
           tcpSocket:
             port: 5432
           timeoutSeconds: 1
-        name: {{ .Values.name }}-{{ .Values.tag_name }}
+        name: {{ .Values.name }}
         ports:
         - containerPort: 5432
           protocol: TCP
@@ -90,4 +90,4 @@ spec:
       volumes:
       - name: {{ .Values.name }}-data
         persistentVolumeClaim:
-          claimName: {{ .Values.name }}-{{ .Values.tag_name }}
+          claimName: {{ .Values.name }}
