--- a/camunda-postgres/templates/configmap.yaml
+++ b/camunda-postgres/templates/configmap.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: {{ .Values.name }}-{{ .Values.tag_name }}
+    app: {{ .Values.name }}
     app-group: {{ .Values.app_group }}
     template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-{{ .Values.tag_name }}-config
+  name: {{ .Values.name }}-config
 data:
-  DATABASE_HOST: "{{ .Values.database_host }}-{{ .Values.tag_name }}"
+  DATABASE_HOST: "{{ .Values.database_host }}"
   DATABASE_NAME: "{{ .Values.database_name }}"
   DATABASE_PORT: "{{ .Values.database_port }}"
   DATABASE_USER: "{{ .Values.database_user }}"
