--- a/camunda-postgres/templates/secret.yaml
+++ b/camunda-postgres/templates/secret.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: {{ .Values.name }}-{{ .Values.tag_name }}
+    app: {{ .Values.name }}
     app-group: {{ .Values.app_group }}
     template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-{{ .Values.tag_name }}-secret
+  name: {{ .Values.name }}-secret
 stringData:
   DATABASE_ADMIN_PASSWORD: {{ .Values.postgresql_admin_password }}
   DATABASE_PASSWORD: {{ .Values.postgresql_password }}
